--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.83MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.73MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.70MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.61MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇮🇹 意大利-251.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-666.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.86MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇫🇷 法国-687.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-2.22MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.73MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.61MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-251.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-666.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇫🇷 法国-687.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
