--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.86MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-162.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇺🇸 美国-571.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-2.05MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-501.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-416.1KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-669.0KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-175.3KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.59MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-571.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-669.0KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-13.82MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.11MB/s(Youtube:不良林), server: 152.70.123.141, port: 80, type: vmess, uuid: 60d31325-3a80-4d82-99d8-ebf3b3108a42, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.70.123.141}}
+  - {name: 🇺🇸 美国-338.8KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-903.2KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.48MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.86MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-162.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.05MB/s(Youtube:不良林)
-      - 🇫🇷 法国-501.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇩🇪 德国-416.1KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-175.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-571.2KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-669.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
