--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-345.8KB/s(Youtube:不良林), server: 146.56.47.161, port: 80, type: vmess, uuid: fa0702f4-8ec9-48e5-9b53-a0afb7c3717e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 146.56.47.161}}
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-903.2KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-338.8KB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.26MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
+  - {name: 🇺🇸 美国-286.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-17.23MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-612.5KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-2.20MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇯🇵 日本-3.24MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-509.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-362.7KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-492.3KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.36MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-345.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-903.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-286.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-17.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-612.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.20MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-509.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-362.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-492.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.36MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
